api_gateway/.helm/templates/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: www.michaeldeveloper.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wtc-api-gateway
                port:
                  number: 80
            pathType: Prefix
